@@ -1,3 +1,9 @@
+2017-05-15  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc-interface/decl.c (gnat_to_gnu_entity) <E_Record_Type>: When there
+	is a representation clause on an extension, propagate the alignment of
+	the parent type only if the platform requires strict alignment.
+
 2017-05-12  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* system-linux-arm.ads (Memory_Size): Use Long_Integer'Size
